--- a/index.html
+++ b/index.html
@@ -295,6 +295,6 @@
   <!-- Toast (used by script.js) -->
   <div id="toast" class="toast" hidden></div>
 
-  <script src="./script.js" defer></script>
+  <script type="module" src="./js/app.js"></script>
 </body>
 </html>
